Added unit-test.